deploy/apps/polaris/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polaris
  labels:
    app: polaris
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polaris
  template:
    metadata:
      labels:
        app: polaris
    spec:
      containers:
      - name: polaris
        image: ghcr.io/retaildevcrews/address-sanitization-service:latest
        resources:
          requests:
            cpu: "1"
            memory: "8Gi"
          limits:
            cpu: "2"
            memory: "16Gi"        
        ports:
        - containerPort: 8080
