deploy/apps/polaris/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: polaris
  labels:
    app: polaris
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: polaris
